FirstProject/src/objects/Product_Table__c.object
<CustomObject>
    <description>Information about those products wich will be placing into basket</description>
    <fields>
        <fullName>Image_Url__c</fullName>
        <label>Image_Url</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Product_Description__c</fullName>
        <label>Product Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Unit_Price__c</fullName>
        <label>Unit Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Units_Available__c</fullName>
        <label>Units Available</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Warehouse__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Warehouse</label>
        <referenceTo>Warehouse__c</referenceTo>
        <relationshipLabel>Product Tables</relationshipLabel>
        <relationshipName>Product_Tables</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Product Table</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Product Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product Tables</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>PriceRule</fullName>
        <active>true</active>
        <errorConditionFormula>Unit_Price__c  &lt;= 0</errorConditionFormula>
        <errorDisplayField>Unit_Price__c</errorDisplayField>
        <errorMessage>Units price can&apos;t be less or equal zero</errorMessage>
    </validationRules>
</CustomObject>